package main.model;

import java.util.List;

public class FateRepository {

    private static final List<Fate> ALL = List.of(
            new Fate(0, "Люди, рожденные в понедельник, верные и надежные, ценят уют в доме и могут быть очень романтичными. В понедельник рождаются сильные люди, способные многого добиться. Главное для людей понедельника понимать, чего они на самом деле хотят. И если они найдут для себя цель, то обязательно её достигнут.\n" +
                    "\n" +
                    "Люди понедельника очень коммуникабельные, могут найти общий язык с кем угодно. Они легко сходятся с людьми, но несмотря на эту легкость иногда их сложно понять. Настроение людей понедельника весьма переменчиво. Рожденные в понедельник очень артистичные натуры, обладают сильным творческим потенциалом. У них часто встречается талант художника."),
            new Fate(1, "Во вторник рождаются воины, защитники, захватчики. Физическая сила играет в жизни этих людей не последнюю роль.\n" +
                    "\n" +
                    "Люди вторника отличаются мужеством и стойкостью перед невзгодами. Они выносливы и надёжны. Ставя перед собой цель, они уже не отступают. Иногда они излишне максималисты, но зато, если они что-то начинают делать, то делают это очень хорошо, стремясь к идеалу. Они вообще не возьмутся за дело, если не будут уверены, что смогут сделать хорошо.\n" +
                    "\n" +
                    "Рождённые во вторник требовательны к себе и окружающим. Категоричны в суждениях и терпеть не могут возражений. Их импульсивность может стать причиной для неприятностей. Они могут совершать поступки, о которых потом сожалеют. С такими людьми сложно ужиться, потому у людей вторника часто не складывается личная жизнь. Зато их целеустремленность позволяет построить хорошую карьеру."),
            new Fate(2, "Среда очень противоречивый день. Родившиеся в среду до обеда не очень удачливы. Им сложно добиться успеха и процветания. А люди, рождённые после полудня, наоборот, могут достичь многого.\n" +
                    "\n" +
                    "Среда наделяет людей умом и способностью выражать свои мысли. Люди среды коммуникабельны, отличаются хитростью и ловкостью. Они могут строить карьеру в абсолютно разных направлениях, особенно там, где требуется холодный расчёт. Торговля, сфера услуг, собственный бизнес, фриланс и даже писательское дело - им доступно все."),
            new Fate(3, "Четверг приносит удачу тем, кто родился в этот день. В четверг рождаются люди с богатым воображением. Они сумеют найти выход даже из самой запутанной ситуации.\n" +
                    "\n" +
                    "Они очень привлекательны для окружения, обладают сильной энергетикой и часто становятся лидерами. Люди четверга щедрые и добрые, часто увлекаются духовными практиками или посвящаются себя эзотерике."),
            new Fate(4, "В пятницу рождаются люди, любящие перемены. Люди пятницы очень любознательные, этакие ищущие натуры с сильной тягой к путешествиям и приключениям.\n" +
                    "\n" +
                    "Пятница наделяет людей, способностью любить и быть любимыми. Рождённые в пятницу высоко ценят семью, любовь. Для них настоящие чувства могут быть и даром судьбы, и роковым испытанием.\n" +
                    "\n" +
                    "Они высоко ценят уют и комфорт, всегда стремятся к благополучию. Но им сложно принадлежать одному человеку. Их тяга к исследованиям и приключениям распространяется и на природу человеческих отношений.\n" +
                    "\n" +
                    "Люди пятницы наделены множеством талантов, но особенно хороши они в творческих профессиях. Артисты, художники, писатели - их может ожидать успех во многих направлениях.\n" +
                    "\n" +
                    "При выборе работы люди пятницы руководствуются прежде всего выгодностью места в плане дохода. И часто им удаётся найти удачное для себя место без особых усилий. Им везет по жизни, в том числе и в финансах."),
            new Fate(5, "В субботу рождаются талантливые, трудолюбивые и ответственные люди. Они умны и часто добиваются высокого положения в карьере. Они исполнительны и аккуратны и потому им хорошо даются точные науки.\n" +
                    "\n" +
                    "Но им никогда ничего не даётся просто так. Успеха они добиваются своим трудом, причём часто к успеху идут долгой и сложной дорогой.\n" +
                    "\n" +
                    "И если в карьере они могут добиться высот, то в личной жизни им часто не везёт. Рождённые в субботу часто одиночки по жизни."),
            new Fate(6, "В воскресенье рождаются люди с сильнейшим творческим началом и очень развитой интуицией. У людей, рождённых в воскресенье, невероятно сильная связь с высшими силами.\n" +
                    "\n" +
                    "Люди воскресенья уверенные в себе и своем будущем. Они оптимисты, с радостью готовы делиться своим солнечным настроением с окружающими. В их голове всегда рождается много идей. Конечно, не все идеи будут реализованы, но сами люди воскресенья не сожалеют о том, что у них что-то не получилось сделать, они смело идут вперед, ведь в их голове рождаются все новые и новые планы.\n" +
                    "\n" +
                    "Рождённые в воскресенье очень харизматичны и привлекательны для окружающих. Они чаще всего выбирают творческие профессии и, если по воле случая профессия у них не творческая, значит у них есть хобби, так или иначе связанное с творчеством.")
    );

    public static Fate findById(int id) {
        if (id < 0 || id >= ALL.size()) {
            throw new IllegalArgumentException("Судьба с id=" + id + " не найдена");
        }
        return ALL.get(id);
    }
}